--- a/index.html
+++ b/index.html
@@ -5,163 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Buscaminas</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>💣</text></svg>">
-  <style>
-    /* ... Mismos estilos que ya tienes ... */
-    /* Solo cambiamos el título, el icono y lo relacionado a dificultad personalizada. */
+  <link rel="stylesheet" href="style.css">
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #2e3440;
-      color: #eceff4;
-      text-align: center;
-      padding: 20px;
-    }
-
-    h1 {
-      font-size: 2.2em;
-      margin-bottom: 10px;
-    }
-
-    #config {
-      margin-bottom: 20px;
-      font-size: 18px;
-    }
-
-    #config label {
-      margin: 5px 10px;
-    }
-
-    #config select, #config input {
-      padding: 5px;
-      border-radius: 5px;
-      border: 1px solid #4c566a;
-      background: #3b4252;
-      color: #eceff4;
-      margin-left: 5px;
-      min-width: 130px;
-    }
-
-    #config button {
-      padding: 8px 16px;
-      border: none;
-      border-radius: 5px;
-      background-color: #5e81ac;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-      margin-left: 15px;
-    }
-
-    #config button:hover {
-      background-color: #81a1c1;
-    }
-
-    #board {
-      display: grid;
-      justify-content: center;
-      margin-top: 20px;
-      user-select: none;
-    }
-
-    .cell {
-      width: 30px;
-      height: 30px;
-      border: 1px solid #4c566a;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      font-size: 16px;
-      background-color: #434c5e;
-      color: #eceff4;
-      cursor: pointer;
-      transition: background 0.2s, transform 0.1s;
-      border-radius: 4px;
-    }
-
-    .cell:hover {
-      background-color: #5e81ac;
-      transform: scale(1.05);
-    }
-
-    .cell.open {
-      background-color: #d8dee9;
-      color: #2e3440;
-      cursor: default;
-      transform: none;
-    }
-
-    .cell.flag {
-      background-color: #bf616a;
-      color: #eceff4;
-    }
-
-    .cell.question {
-      background-color: #ebcb8b;
-      color: #2e3440;
-    }
-
-    .cell.open[data-adjacent="1"] { color: #5e81ac; }
-    .cell.open[data-adjacent="2"] { color: #a3be8c; }
-    .cell.open[data-adjacent="3"] { color: #d08770; }
-    .cell.open[data-adjacent="4"] { color: #b48ead; }
-    .cell.open[data-adjacent="5"] { color: #bf616a; }
-    .cell.open[data-adjacent="6"] { color: #88c0d0; }
-    .cell.open[data-adjacent="7"] { color: #81a1c1; }
-    .cell.open[data-adjacent="8"] { color: #8fbcbb; }
-
-    #flagCounter {
-      font-size: 20px;
-      margin-top: 10px;
-    }
-
-    .explosion {
-      animation: explode 0.4s forwards;
-    }
-
-    @keyframes explode {
-      0% { background-color: red; transform: scale(1); }
-      50% { background-color: orange; transform: scale(1.5); }
-      100% { background-color: black; transform: scale(0.8); }
-    }
-
-    .mine-release {
-      animation: release 2s ease-in-out forwards;
-    }
-
-    .mine-flower {
-        animation: bloom 1s ease-in-out forwards;
-        font-size: 20px;
-    }
-
-@keyframes bloom {
-  0% {
-    transform: scale(0.3) rotate(0deg);
-    opacity: 0.2;
-    color: #e5e9f0;
-  }
-  50% {
-    transform: scale(1.3) rotate(180deg);
-    opacity: 1;
-    color: #a3be8c;
-  }
-  100% {
-    transform: scale(1) rotate(360deg);
-    color: #ebcb8b;
-  }
-}
-
-
-    @keyframes release {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-200px); opacity: 0; }
-    }
-
-    #customSettings {
-      margin-top: 10px;
-      display: none;
-    }
-  </style>
 </head>
 <body>
   <h1>💣 Buscaminas</h1>
@@ -209,265 +54,10 @@
   <div id="flagCounter">🚩 Banderas restantes: <span id="flagsLeft">0</span></div>
   <div id="board"></div>
 
-  <script>
-    let board = [];
-    let mineCount = 10;
-    let flagsLeft = 10;
-    let gameOver = false;
-    let firstClick = true;
-    let cellsOpened = 0;
+  <script src="script.js"></script>
 
-    const boardSizes = {
-      small: 15,
-      medium: 24,
-      large: 36,
-      huge: 48
-    };
-
-    const difficultyRatios = {
-      easy: 0.10,
-      medium: 0.20,
-      hard: 0.30,
-      extreme: 0.45
-    };
-
-    function onBoardSizeChange() {
-      const size = document.getElementById('boardSize').value;
-      const customSettings = document.getElementById('customSettings');
-      const difficultyLabel = document.getElementById('difficultyLabel');
-      const minesLabel = document.getElementById('customMinesLabel');
-
-      if (size === 'custom') {
-        customSettings.style.display = 'inline-block';
-        difficultyLabel.style.display = 'none';
-        minesLabel.style.display = 'inline-block';
-      } else {
-        customSettings.style.display = 'none';
-        difficultyLabel.style.display = 'inline-block';
-        minesLabel.style.display = 'none';
-      }
-    }
-
-    function startGame() {
-      let width, height;
-      const size = document.getElementById('boardSize').value;
-
-      if (size === 'custom') {
-        width = parseInt(document.getElementById('customWidth').value);
-        height = parseInt(document.getElementById('customHeight').value);
-        mineCount = parseInt(document.getElementById('customMines').value);
-      } else {
-        width = boardSizes[size];
-        height = Math.ceil(width * 0.8);
-        const difficulty = document.getElementById('difficulty').value;
-        const ratio = difficultyRatios[difficulty];
-        mineCount = Math.round(width * height * ratio);
-      }
-
-      if (mineCount >= width * height) mineCount = width * height - 1;
-      if (mineCount < 1) mineCount = 1;
-
-      flagsLeft = mineCount;
-      gameOver = false;
-      firstClick = true;
-      cellsOpened = 0;
-
-      document.getElementById('flagsLeft').innerText = flagsLeft;
-
-      const boardEl = document.getElementById('board');
-      boardEl.innerHTML = '';
-      boardEl.style.gridTemplateColumns = `repeat(${width}, 30px)`;
-      boardEl.style.gridTemplateRows = `repeat(${height}, 30px)`;
-
-      board = [];
-
-      for (let r = 0; r < height; r++) {
-        board[r] = [];
-        for (let c = 0; c < width; c++) {
-          const cell = {
-            row: r,
-            col: c,
-            mine: false,
-            opened: false,
-            flagged: false,
-            question: false,
-            element: document.createElement('div'),
-            adjacent: 0
-          };
-
-          cell.element.classList.add('cell');
-          cell.element.addEventListener('click', () => handleLeftClick(cell));
-          cell.element.addEventListener('contextmenu', (e) => {
-            e.preventDefault();
-            handleRightClick(cell);
-          });
-
-          boardEl.appendChild(cell.element);
-          board[r][c] = cell;
-        }
-      }
-    }
-
-    function placeMines(excludeRow, excludeCol) {
-      let placed = 0;
-      const rows = board.length;
-      const cols = board[0].length;
-
-      while (placed < mineCount) {
-        const r = Math.floor(Math.random() * rows);
-        const c = Math.floor(Math.random() * cols);
-
-        const isExcluded = Math.abs(r - excludeRow) <= 1 && Math.abs(c - excludeCol) <= 1;
-
-        if (!board[r][c].mine && !isExcluded) {
-          board[r][c].mine = true;
-          placed++;
-        }
-      }
-
-      for (let r = 0; r < rows; r++) {
-        for (let c = 0; c < cols; c++) {
-          board[r][c].adjacent = countAdjacentMines(r, c);
-        }
-      }
-    }
-
-    function countAdjacentMines(r, c) {
-      let count = 0;
-      for (let i = -1; i <= 1; i++) {
-        for (let j = -1; j <= 1; j++) {
-          const nr = r + i;
-          const nc = c + j;
-          if (nr >= 0 && nr < board.length && nc >= 0 && nc < board[0].length && board[nr][nc].mine) {
-            count++;
-          }
-        }
-      }
-      return count;
-    }
-
-    function handleLeftClick(cell) {
-      if (gameOver || cell.opened || cell.flagged) return;
-
-      if (firstClick) {
-        placeMines(cell.row, cell.col);
-        firstClick = false;
-      }
-
-      openCell(cell);
-
-      if (cell.mine) {
-        cell.element.classList.add('explosion');
-        cell.element.innerText = '💣';
-        endGame(false);
-      }
-
-      if (checkWin()) {
-        endGame(true);
-      }
-    }
-
-    function openCell(cell) {
-      if (cell.opened || cell.flagged) return;
-
-      cell.opened = true;
-      cell.element.classList.add('open');
-      cell.element.classList.remove('flag', 'question');
-      cell.element.innerText = '';
-      cell.element.dataset.adjacent = cell.adjacent;
-
-      if (!cell.mine) cellsOpened++;
-
-      if (cell.adjacent > 0) {
-        cell.element.innerText = cell.adjacent;
-      } else {
-        openSurrounding(cell.row, cell.col);
-      }
-    }
-
-    function openSurrounding(r, c) {
-      for (let i = -1; i <= 1; i++) {
-        for (let j = -1; j <= 1; j++) {
-          const nr = r + i;
-          const nc = c + j;
-          if (nr >= 0 && nr < board.length && nc >= 0 && nc < board[0].length) {
-            const neighbor = board[nr][nc];
-            if (!neighbor.opened && !neighbor.mine && !neighbor.flagged) {
-              openCell(neighbor);
-            }
-          }
-        }
-      }
-    }
-
-    function handleRightClick(cell) {
-      if (gameOver || cell.opened) return;
-
-      if (!cell.flagged && !cell.question && flagsLeft > 0) {
-        cell.flagged = true;
-        cell.element.innerText = '🚩';
-        cell.element.classList.add('flag');
-        flagsLeft--;
-      } else if (cell.flagged) {
-        cell.flagged = false;
-        cell.question = true;
-        cell.element.innerText = '?';
-        cell.element.classList.remove('flag');
-        cell.element.classList.add('question');
-        flagsLeft++;
-      } else if (cell.question) {
-        cell.question = false;
-        cell.element.innerText = '';
-        cell.element.classList.remove('question');
-      }
-
-      document.getElementById('flagsLeft').innerText = flagsLeft;
-    }
-
-    function checkWin() {
-      const total = board.length * board[0].length;
-      return total - mineCount === cellsOpened;
-    }
-
-    function endGame(won) {
-        gameOver = true;
-        if (!won) {
-            for (let r = 0; r < board.length; r++) {
-            for (let c = 0; c < board[0].length; c++) {
-                const cell = board[r][c];
-                if (cell.mine) {
-                cell.element.innerText = '💣';
-                cell.element.classList.add('mine-release');
-                cell.element.classList.remove('flag', 'question');
-                } else if (cell.flagged) {
-                cell.element.innerText = '❌';
-                cell.element.classList.remove('flag');
-                }
-            }
-            }
-        } else {
-            if (won) {
-                for (let r = 0; r < board.length; r++) {
-                    for (let c = 0; c < board[0].length; c++) {
-                    const cell = board[r][c];
-                        if (cell.mine) {
-                            cell.element.innerText = '🌸';
-                            cell.element.classList.add('mine-flower');
-                            cell.element.classList.remove('flag', 'question');
-                        }
-                    }
-                }           
-            }
-        }
-    }
-
-    window.onload = () => {
-      onBoardSizeChange();
-      startGame();
-    };
-  </script>
-    <footer style="margin-top: 20px; font-size: 14px; color: #888;">
+  <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
-    </footer> 
+  </footer>
 </body>
 </html>
