--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Dificultad:
       <select id="difficulty">
         <option value="easy">Fácil</option>
-        <option value="medium" selected>Medio</option>
+        <option value="medium" selected>Normal</option>
         <option value="hard">Difícil</option>
         <option value="extreme">Extremo</option>
       </select>
@@ -52,12 +52,17 @@
   </div>
 
   <div id="flagCounter">🚩 Banderas restantes: <span id="flagsLeft">0</span></div>
+  <div id="timer">⏱ Tiempo: <span id="timeElapsed">0</span>s</div>
+  <button id="retryButton" onclick="retryGame()" style="display:none; margin-top: 10px;">🔁 Volver a intentar</button>
+
   <div id="board"></div>
 
   <script src="script.js"></script>
 
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
+    <br />
+    version 1.1.3
   </footer>
 </body>
 </html>
