--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
   <div id="flagCounter">🚩 Banderas restantes: <span id="flagsLeft">0</span></div>
   <div id="timer">⏱ Tiempo: <span id="timeElapsed">0</span>s</div>
+  <div id="attemptCounter">🎮 Intentos realizados: <span id="attempts">0</span></div>
   <button id="retryButton" onclick="retryGame()" style="display:none; margin-top: 10px;">🔁 Volver a intentar</button>
 
   <div id="board"></div>
@@ -62,7 +63,7 @@
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.1.3
+    version 1.1.4
   </footer>
 </body>
 </html>
