--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
     <button onclick="startGame()">Iniciar Juego</button>
   </div>
 
-  <div id="flagCounter">🚩 Banderas restantes: <span id="flagsLeft">0</span></div>
-  <div id="timer">⏱ Intento actual: <span id="timeElapsed">00:00:00</span></div>
+  <div id="gameStatusBar">
+    <div id="flagCounter">🚩 Banderas restantes: <span id="flagsLeft">0</span></div>
+    <div id="timer">⏱ Tiempo: <span id="timeElapsed">00:00:00</span></div>
+  </div>
   <div id="totalTimer">⏱ Tiempo total jugado: <span id="totalTime">00:00:00</span></div>
   <div id="attemptCounter">🎮 Intentos realizados: <span id="attempts">0</span></div>
   <button id="retryButton" onclick="retryGame()" style="display:none; margin-top: 10px;">🔁 Volver a intentar</button>
@@ -64,7 +66,7 @@
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.1.6
+    version 1.1.7
   </footer>
   <div id="clockOverlay"></div>
 </body>
