--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <li>Al inicio de la partida hay un contador de <strong>banderas 🚩 restantes</strong>, la partida <strong>inicia</strong> con una cantidad de <strong>banderas igual al total de minas 💣</strong></li>
     </ul>
     <p>
-      _____________________________________________________________________________
+      _________________________________________________________________________________
     </p>
     <p>
       Aquí están los controles básicos:
@@ -116,7 +116,7 @@
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.3.0
+    version 1.3.0b
   </footer>
   <div id="clockOverlay"></div>
 </body>
