--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       <li>Las <strong>8 celdas</strong> que rodean cualquier casilla son consideredas <strong>alrededor</strong></li>
       <li>Abrir una celda <strong>con mina 💣</strong> terminara el juego en derrota</li>
       <li>Para ganar, debes abrir <strong>todas</strong> las celdas que <strong>no</strong> contienen minas 💣</li>
-      <li>Las banderas 🚩 y las marcas "?" no afectan el juego, son <strong>solo una guia</strong></li>
+      <li>Las banderas 🚩 y las marcas ❔ no afectan el juego, son <strong>solo una guia</strong></li>
       <li>Las celdas <strong>con</strong> una bandera 🚩 se bloquean y <strong>no</strong> pueden ser abiertas</li>
-      <li>Las celdas <strong>con</strong> marca "?" <strong>si</strong> pueden ser abiertas</li>
+      <li>Las celdas <strong>con</strong> marca ❔ <strong>si</strong> pueden ser abiertas</li>
       <li>Si revelas una celda con <strong>0 minas 💣 alrededor</strong>, se revelarán automáticamente las celdas adyacentes</li>
       <li>Al inicio de la partida hay un contador de <strong>banderas 🚩 restantes</strong>, la partida <strong>inicia</strong> con una cantidad de <strong>banderas igual al total de minas 💣</strong></li>
     </ul>
@@ -101,7 +101,7 @@
     <ul style="text-align: left;">
       <li>🖱️ <strong>Clic Izquierdo</strong>: Revelar celda</li>
       <li>🖱️ <strong>Clic Derecho</strong>: Colocar bandera 🚩</li>
-      <li>🖱️ <strong>Clic Derecho</strong>: Sobre una bandera 🚩 para colocar marca "?" </li>
+      <li>🖱️ <strong>Clic Derecho</strong>: Sobre una bandera 🚩 para colocar marca ❔ </li>
       <li>⏎ <strong>Enter</strong> o <strong>Espacio</strong>: Reintentar cuando pierdas</li>
       <li>⚙️ Cambia el tamaño o dificultad desde el menú superior</li>
     </ul>
@@ -116,7 +116,7 @@
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.3.0b
+    version 1.3.0c
   </footer>
   <div id="clockOverlay"></div>
 </body>
