--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.3.0c
+    version 1.3.1
   </footer>
   <div id="clockOverlay"></div>
 </body>
