--- a/index.html
+++ b/index.html
@@ -111,13 +111,16 @@
 
   <div id="board"></div>
 
-  <script src="script.js"></script>
+  
 
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.3.1
+    version 1.3.2
   </footer>
   <div id="clockOverlay"></div>
+ 
+  <button id="themeToggle" title="Cambiar tema">🌙</button>
+  <script src="script.js"></script>
 </body>
 </html>
