--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 
 </head>
 <body>
+  <!-- Contenedor del botón Configuraciones -->
+<div class="config-container">
+
+  <!-- Botón Configuraciones -->
+  <button class="config-button" id="config-button" aria-haspopup="true" aria-expanded="false">
+    Configuraciones
+  </button>
+
+  <!-- Dropdown con opciones -->
+  <div class="config-dropdown" id="config-dropdown" role="menu" aria-label="Opciones de configuración">
+    <button id="patch-notes-button" role="menuitem" tabindex="0">
+      Notas de parche
+    </button>
+  </div>
+</div>
+
+<!-- Modal para Notas de parche -->
+<div class="config-modal config-patch-notes-modal" id="patch-notes-modal" role="dialog" aria-modal="true" aria-labelledby="patch-notes-title" tabindex="-1" style="display: none;">
+
+  <div class="config-modal-content">
+    <h2 id="patch-notes-title">Notas de parche</h2>
+    <div class="patch-notes-content">
+      <!-- Aquí puedes poner el contenido real de las notas -->
+      <p>Versión 1.3.2 - Disponibilidad de un botón para alternar el modo oscuro y claro.</p>
+      <p>Versión 1.3.3 - Creación de botón para configuraciones, el cual solo muestra las notas de parche.</p>
+    </div>
+    <button class="config-close-btn" id="close-patch-notes-btn">Cerrar</button>
+  </div>
+</div>
+
+
   <h1>💣 Buscaminas</h1>
 
   <div id="config">
@@ -116,7 +147,7 @@
   <footer style="margin-top: 20px; font-size: 14px; color: #888;">
     Created by Caasi04
     <br />
-    version 1.3.2
+    version 1.3.3
   </footer>
   <div id="clockOverlay"></div>
  
